<?xml version="1.0" encoding="UTF-8" ?>
<package format="2">
    <name>map_transpose</name>
    <version>0.0.0</version>
    <description>A Plugin to change map format</description>
    <maintainer email="zhang@TODO.tld">Maplab user</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin_simple</buildtool_depend>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>console_common</depend>
    <depend>map_manager</depend>
    <depend>vi_map</depend>
</package>